# aws-insntance-types-getter

./: pyproject.toml  setup.cfg
src/aws_instance_type_getter/: __init__.py  __main__.py  args.py  availability_zone.py  instance_type.py  region.py
