[metadata]
name = aws-insntance-types-getter
version = 0.0.1a1
description = Amazon EC2 instance types information getter
author = mh35
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
install_requires =
    boto3
    openpyxl
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    pylint
    pycodestyle
    pydocstyle
    mypy
    boto3-stubs[essential]
    flake8
    flake8-annotations
    flake8-black
    flake8-builtins
    flake8-comprehensions
    flake8-docstrings
    flake8-isort
    pep8-naming
    bandit
    black
    isort
test =
    pytest
    pytest-cov
doc =
    Sphinx
tzdata =
    tzdata
